fix bug not showing logged in until after refresh

--- a/app/assets/stylesheets/components/session_form.scss
+++ b/app/assets/stylesheets/components/session_form.scss
@@ -58,6 +58,7 @@
         font-weight: bold;
         margin-top: 2em;
         margin-bottom: 5px;
+        cursor: pointer;
     }
 
     input[type=submit]:hover {
@@ -69,6 +70,7 @@
         font-size: 1em;
         font-weight: 300;
         margin-right: 5px;
+        cursor: default;
     }
 
     a {
@@ -81,6 +83,7 @@
         color: white;
         font-size: 1.5em;
         padding: 1.5em;
+        cursor: default;
     }
 
     .error {
